@@ -18,9 +18,12 @@ Version 1.0.0b2-dev
 Not yet released.
 
 - Changes serialization/deserialization to class-based implementation instead
-  of a function-based implementation.
+  of a function-based implementation. This also adds support for serialization
+  of heterogeneous collections.
 - :issue:`7`: allows filtering before function evaluation.
 - :issue:`49`: deserializers now expect a complete JSON API document.
+- :issue:`200`: be smarter about determining the ``collection_name`` for
+  polymorphic tables.
 - :issue:`253`: don't assign to callable attributes of models.
 - :issue:`481,488`: added negation (``not``) operator for search.
 - :issue:`492`: support JSON API recommended "simple" filtering.
